# basicserver

./: main.py  pyproject.toml  start.sh
