[tool.poetry]
name = "openline"
version = "0.1.0"
description = "Simple http server to respond to nova hooks"
authors = ["surender <surender sslamba10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
Hypercorn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
